--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,14 +12,21 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "next": "13.4.4",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-tailwindcss-datepicker": "^1.6.1",
+    "tailwind-datepicker-react": "^1.3.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2"
   }
 }
