Update UI and APIs call

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-ETHERSCAN_API_KEY=YOUR_API_KEY
-ETHERSCAN_API_URL=
+NODE_ENV=local
 
-BINANCE_API_URL=
+BINANCE_API_URL=https://api.binance.com/
+INDEXER_API_URL=http://127.0.0.1:3000/
+PROXY_API_URL=http://127.0.0.1:8080/
 
