--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,10 @@
       "name": "Next.js: debug client-side",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000"
+      "url": "http://127.0.0.1:3000"
     },
     {
-   ac   "name": "Next.js: debug full stack",
+      "name": "Next.js: debug full stack",
       "type": "node-terminal",
       "request": "launch",
       "command": "pnpm dev",
